fix : about / text alignement left

--- a/portfolio/src/Components/About/About.scss
+++ b/portfolio/src/Components/About/About.scss
@@ -16,7 +16,7 @@
     font-size: 1rem;
     font-weight: 300;
     color: #333;
-    text-align: justify;
+    text-align: left;
     margin: 20px;
     width: 50%;
 
